--- a/demo-service-impl/pom.xml
+++ b/demo-service-impl/pom.xml
@@ -10,6 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demo-service-impl</artifactId>
+    <name>Jigsaw JUG DEMO ::: Services Implementation</name>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.ecuadorjug</groupId>
+            <artifactId>demo-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ecuadorjug</groupId>
+            <artifactId>demo-service-spi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
